--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
 transformers==4.28.1  # Specify a compatible version of transformers
 gtts
-torch==1.11.0  # Specify a compatible version of PyTorch
+torch==2.0.1  # Use a compatible version of PyTorch
 tensorflow==2.11.0  # Specify a compatible version of TensorFlow
 keras==2.11.0  # Specify a compatible version of Keras
