--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit
-transformers==4.28.1  # Specify a compatible version of transformers
+transformers
 gtts
-torch==2.0.1  # Use a compatible version of PyTorch
-tensorflow==2.11.0  # Specify a compatible version of TensorFlow
-keras==2.11.0  # Specify a compatible version of Keras
+torch==2.0.1  # Latest compatible version of PyTorch
+tensorflow==2.12.0  # Use a compatible version of TensorFlow
